--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet"> 
@@ -181,15 +181,15 @@
 
                     <ul class="aboutlist">
                         <li class="aboutlist-element">
-                            <img class="aboutlist-element__image" src="images/box_1.jpg" alt="Service 1" />
+                            <img class="aboutlist-element__image" src="images/aboutus1.jpg" alt="Service 1" />                            
                             <p class="aboutlist-element__label">Десктопні додатки</p>
                         </li>
                         <li class="aboutlist-element">
-                            <img class="aboutlist-element__image" src="images/box_2.jpg" alt="Service 2" />
+                            <img class="aboutlist-element__image" src="images/aboutus2.jpg" alt="Service 2" />
                             <p class="aboutlist-element__label">Мобільні додатки</p>
                         </li>
                         <li class="aboutlist-element">
-                            <img class="aboutlist-element__image" src="images/box_3.jpg" alt="Service 3" />
+                            <img class="aboutlist-element__image" src="images/aboutus3.jpg" alt="Service 3" />
                             <p class="aboutlist-element__label">Дизайнерські рішення</p>
                         </li>
                     </ul>
@@ -205,7 +205,13 @@
                     </h2>
                     <ul class="list team-list">
                                 <li class="team-item">
-                                    <img src="images/img.jpg" alt="men 1" width="270" />
+                                    <picture>
+                                        <source srcset="images/desktop/team1.jpg 1x, images/desktop/team1@2x.jpg 2x" media="(min-width: 1200px)" />
+                                        <source srcset="images/tablet/team1.jpg 1x, images/tablet/team1@2x.jpg 2x" media="(min-width: 768px)" />
+                                        <source srcset="images/mobile/team1.jpg 1x, images/mobile/team1@2x.jpg 2x" media="(max-width: 767px)" />
+                                        <img src="images/mobile/team1.jpg" alt="men 1" class="team-item__image" />
+                                    </picture>
+
                                     <div class="team-humen">
                                             <h3 class="team-title">
                                                 Ігор Дем'яненко
@@ -247,8 +253,14 @@
                                 </li>
 
                                 <li class="team-item">
-                                            <img src="images/img1.jpg" alt="woman 2" width="270" />
-                                            <div class="team-humen">
+                                    <picture>
+                                        <source srcset="images/desktop/team2.jpg 1x, images/desktop/team2@2x.jpg 2x" media="(min-width: 1200px)" />
+                                        <source srcset="images/tablet/team2.jpg 1x, images/tablet/team2@2x.jpg 2x" media="(min-width: 768px)" />
+                                        <source srcset="images/mobile/team2.jpg 1x, images/mobile/team2@2x.jpg 2x" media="(max-width: 767px)" />
+                                        <img src="images/mobile/team2.jpg" alt="men 1" class="team-item__image" />
+                                    </picture>
+
+                                    <div class="team-humen">
                                                 <h3 class="team-title">
                                                     Ольга Рєпіна
                                                 </h3>
@@ -289,8 +301,14 @@
                                 </li>
 
                                 <li class="team-item">
-                                                <img src="images/img2.jpg" alt="man 3" width="270" />
-                                                <div class="team-humen">
+                                    <picture>
+                                        <source srcset="images/desktop/team3.jpg 1x, images/desktop/team3@2x.jpg 2x" media="(min-width: 1200px)" />
+                                        <source srcset="images/tablet/team3.jpg 1x, images/tablet/team3@2x.jpg 2x" media="(min-width: 768px)" />
+                                        <source srcset="images/mobile/team3.jpg 1x, images/mobile/team3@2x.jpg 2x" media="(max-width: 767px)" />
+                                        <img src="images/mobile/team3.jpg" alt="men 1" class="team-item__image" />
+                                    </picture>
+
+                                    <div class="team-humen">
                                                     <h3 class="team-title">
                                                         Микола Тарасов
                                                     </h3>
@@ -331,8 +349,14 @@
                                 </li>
 
                                 <li class="team-item">
-                                                <img src="images/img3.jpg" alt="man 4" width="270" />
-                                                <div class="team-humen">
+                                    <picture>
+                                        <source srcset="images/desktop/team4.jpg 1x, images/desktop/team4@2x.jpg 2x" media="(min-width: 1200px)" />
+                                        <source srcset="images/tablet/team4.jpg 1x, images/tablet/team4@2x.jpg 2x" media="(min-width: 768px)" />
+                                        <source srcset="images/mobile/team4.jpg 1x, images/mobile/team4@2x.jpg 2x" media="(max-width: 767px)" />
+                                        <img src="images/mobile/team4.jpg" alt="men 1" class="team-item__image" />
+                                    </picture>
+
+                                    <div class="team-humen">
                                                     <h3 class="team-title">
                                                         Михайло Єрмаков
                                                     </h3>
@@ -432,7 +456,7 @@
 
     
     <footer class="footer">
-        <div class="container">
+        <div class="container container-footer">
             <div>
                 <a class="logo" href="/"><span class="logo-accent">Web</span><span class="logo-light">Studio</span></a>
                 <ul class="list-footer">
@@ -500,5 +524,6 @@
         </div>    
     </footer>
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
 </body>
 </html>
