--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <!-- 1 -->
         <section class="hero">
                 <div class="container-hero">
-                    <h1 class="container-hero__title">Ефективні рішення для вашого бізнесу</h1>
+                    <h1 class="container-hero__title">Ефективні рішення для <br /> вашого бізнесу</h1>
                     <button data-modal-open class="container-hero__button" type="button">Замовити послугу</button>
                 </div>
 
