--- a/index.html
+++ b/index.html
@@ -217,15 +217,24 @@
 
                     <ul class="aboutlist">
                         <li class="aboutlist-element">
-                            <img class="aboutlist-element__image" src="images/desktop/aboutus1.jpg" alt="Service 1" />                            
+                            <picture>
+                                <source srcset="images/desktop/aboutus1.jpg 1x, images/desktop/aboutus1@2x.jpg 2x" media="(min-width: 1200px)" />
+                                <img class="aboutlist-element__image" src="images/desktop/aboutus1.jpg" alt="Service 1" />    
+                            </picture>                        
                             <p class="aboutlist-element__label">Десктопні додатки</p>
                         </li>
                         <li class="aboutlist-element">
-                            <img class="aboutlist-element__image" src="images/desktop/aboutus2.jpg" alt="Service 2" />
+                            <picture>
+                                <source srcset="images/desktop/aboutus2.jpg 1x, images/desktop/aboutus2@2x.jpg 2x" media="(min-width: 1200px)" />
+                                <img class="aboutlist-element__image" src="images/desktop/aboutus2.jpg" alt="Service 2" />
+                            </picture>                        
                             <p class="aboutlist-element__label">Мобільні додатки</p>
                         </li>
                         <li class="aboutlist-element">
-                            <img class="aboutlist-element__image" src="images/desktop/aboutus3.jpg" alt="Service 3" />
+                            <picture>
+                                <source srcset="images/desktop/aboutus3.jpg 1x, images/desktop/aboutus3@2x.jpg 2x" media="(min-width: 1200px)" />
+                                <img class="aboutlist-element__image" src="images/desktop/aboutus2.jpg" alt="Service 2" />
+                            </picture>                        
                             <p class="aboutlist-element__label">Дизайнерські рішення</p>
                         </li>
                     </ul>
